fe login & vuex

--- a/web/mobile/src/assets/scss/_vars.scss
+++ b/web/mobile/src/assets/scss/_vars.scss
@@ -1,7 +1,9 @@
 //color
 $colors: (
   "primary": #c42a2a,
+  "l-primary": #EB3E3E,
   "blue": #5294d1,
+  "yellow": #FFEF57,
   "span": #cecece,
   "context": #eee,
   'border': #e6e6e6,
