send post & chat time

--- a/web/mobile/src/assets/scss/_vars.scss
+++ b/web/mobile/src/assets/scss/_vars.scss
@@ -6,7 +6,7 @@ $colors: (
   "yellow": #FFEF57,
   "span": #cecece,
   "context": #eee,
-  'border': #e6e6e6,
+  'border': #ececec,
   "white": white,
   'dark': #333,
   "grey": #838383,
