--- a/web/mobile/src/assets/scss/style.scss
+++ b/web/mobile/src/assets/scss/style.scss
@@ -72,6 +72,9 @@ a {
 .lg-newsong{
   background-image: linear-gradient(to right, #ed4264 , #ffedbc );
 }
+.lg-pfm{
+  background-image: linear-gradient( 135deg, #C2FFD8 10%, #465EFB 100%);
+}
 
 .f-normal{
   font-weight: normal;
